# janela

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: run_mosaic.py
janela/: __init__.py
janela/_impl/: mac.py  wmctrl_xdotool_xlib.py
janela/effects/: __init__.py  mosaic.py
janela/interfaces/: __init__.py  interface.py  models.py
janela/playground/: __init__.py  mosaic.py
janela/util/: __init__.py  cmd.py
