[tool.poetry]
name = "janela"
version = "0.0.3"
description = "A simple tool to automate window management"
authors = ["Gustavo <github.dxabr@aleeas.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
python-xlib = "^0.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
